objects/BW_Milestone__c.object
<CustomObject>
    <fields>
        <fullName>BW_Actual_Date__c</fullName>
        <label>Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BW_Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BW_Planned_Date__c</fullName>
        <label>Planned Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BW_Rating_Indicator__c</fullName>
        <formula>CASE(TEXT(BW_Rating__c),
&quot;1&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;2&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;3&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT5&quot;,&quot;Green&quot;),
&quot;4&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;5&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;6&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;7&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYTA&quot;,&quot;Yellow&quot;),
&quot;8&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;9&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;10&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0156g000000bYT0&quot;,&quot;Red&quot;),
&quot;Not Found&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BW_Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BW_RAG</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                    <default>true</default>
                    <label>On Track</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Running Late</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BW_Workstream__c</fullName>
        <label>Workstream</label>
        <referenceTo>BW_Workstream__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>